copy path parsing tests